--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
    </main> 
         </header>
-            <h1> Título do site </h1>
+            <h1> Cursos grátis </h1>
         </header>
         <article>
-            <h1>Artigo 001</h1>
-            <p>Texto artigo 001</p>
+            <h1>Curso de HTML5 com CSS3</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, iste velit. Quibusdam quidem laudantium ab deserunt optio sapiente commodi velit in doloremque magnam id eius, tempore sint magni consequuntur a!</p>
         </article>
         <article>
-            <h1>Artigo 002</h1>
-            <p>Texto artigo 002</p>
+            <h1>curso de Javascript</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque nesciunt neque quos tempore obcaecati, accusamus ipsa labore nobis quam mollitia laudantium officiis quisquam eaque numquam eos iste, doloribus, exercitationem ducimus!</p>
         </article>
     </main> 
 </body>
